--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,12 @@
   padding-top: 30px;
   align-items: center;
   font-family: Arial, Helvetica, sans-serif;
+  border: 1px solid rgb(246, 242, 242);
+  border-radius: 10px;
+  max-width: 50%;
+  align-items: center;
+  margin-left: 400px;
+  margin-top: 50px;
 }
 
 .button{
@@ -14,6 +20,7 @@
   background-color: lightblue;
   color: white;
   border: none;
+  text-decoration: none;
 }
 
 .title{
